; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/of/extr_device.c_modalias_show.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/of/extr_device.c_modalias_show.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.device_attribute = type { i32 }
%struct.of_device = type { i32 }

@PAGE_SIZE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.device*, %struct.device_attribute*, i8*)* @modalias_show to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @modalias_show(%struct.device* %0, %struct.device_attribute* %1, i8* %2) #0 {
  %4 = alloca %struct.device*, align 8
  %5 = alloca %struct.device_attribute*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.of_device*, align 8
  %8 = alloca i64, align 8
  store %struct.device* %0, %struct.device** %4, align 8
  store %struct.device_attribute* %1, %struct.device_attribute** %5, align 8
  store i8* %2, i8** %6, align 8
  %9 = load %struct.device*, %struct.device** %4, align 8
  %10 = call %struct.of_device* @to_of_device(%struct.device* %9)
  store %struct.of_device* %10, %struct.of_device** %7, align 8
  store i64 0, i64* %8, align 8
  %11 = load %struct.of_device*, %struct.of_device** %7, align 8
  %12 = load i8*, i8** %6, align 8
  %13 = load i64, i64* @PAGE_SIZE, align 8
  %14 = sub nsw i64 %13, 2
  %15 = call i64 @of_device_get_modalias(%struct.of_device* %11, i8* %12, i64 %14)
  store i64 %15, i64* %8, align 8
  %16 = load i8*, i8** %6, align 8
  %17 = load i64, i64* %8, align 8
  %18 = getelementptr inbounds i8, i8* %16, i64 %17
  store i8 10, i8* %18, align 1
  %19 = load i8*, i8** %6, align 8
  %20 = load i64, i64* %8, align 8
  %21 = add i64 %20, 1
  %22 = getelementptr inbounds i8, i8* %19, i64 %21
  store i8 0, i8* %22, align 1
  %23 = load i64, i64* %8, align 8
  %24 = add i64 %23, 1
  ret i64 %24
}

declare dso_local %struct.of_device* @to_of_device(%struct.device*) #1

declare dso_local i64 @of_device_get_modalias(%struct.of_device*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
